kubernetes/matverseny-admin/matverseny-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: matverseny-admin
  namespace: matverseny-admin
spec:
  replicas: 3
  selector:
    matchLabels:
      app: matverseny-admin
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: matverseny-admin
    spec:
      containers:
        - name: matverseny-admin
          image: verseghy/website_admin_frontend
          ports:
            - containerPort: 80
          imagePullPolicy: Always
          resources:
            requests:
              memory: 2Mi
            limits:
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: matverseny-admin
  namespace: matverseny-admin
spec:
  selector:
    app: matverseny-admin
  ports:
    - name: matverseny-admin
      protocol: TCP
      port: 80
      targetPort: 80
